--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -42,6 +42,14 @@
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+        {% elsif post.collection == 'projects' %}
+          <p>
+            <strong>Funded by </strong> <i>{{ post.venue }}</i><br/>
+            {% if post.grantid %}<strong>Project ID:</strong> {{ post.grantid }}<br/>{% endif %}
+            {% if post.startdate and post.enddate %}
+              <strong>Duration:</strong> {{ post.startdate | date: "%Y.%m.%d" }} – {{ post.enddate | date: "%Y.%m.%d" }}
+            {% endif %}
+          </p>
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
