--- a/_includes/custom-archive-card.html
+++ b/_includes/custom-archive-card.html
@@ -6,8 +6,8 @@
   </h2>
   
   {% if include.excerpt %}
-  <blockquote class="archive__item-excerpt" style="margin-top: 0.25rem;">
-    ❝ <em>{{ include.excerpt }}</em>
+  <blockquote class="archive__item-excerpt" style="margin-top: 0.5rem;">
+     <em>{{ include.excerpt }}</em>
   </blockquote>
   {% endif %}
 </div>
